# meltano-hub-api

./: .pre-commit-config.yaml  Dockerfile  README.md  build.py  justfile  pyproject.toml  schemathesis.toml  tach.toml
.github/: renovate.json5
.github/workflows/: pre-commit.yml  tests.yml
.github/workflows/resources/: requirements.txt
src/hub_api/: client.py  dependencies.py  enums.py  exceptions.py  main.py  schema.sql
src/hub_api/api/api_v1/endpoints/: maintainers.py  plugins.py
src/hub_api/helpers/: compatibility.py  compression.py  etag.py
src/hub_api/litestar_app/: app.py  dependencies.py  maintainers.py  plugins.py
src/hub_api/schemas/: meltano.py  validation.py
tests/: conftest.py  test_schemas.py
tests/app/: test_app.py  test_hub.py
tests/app/__snapshots__/test_app/: test_openapi_spec.json  test_plugin_details[dbt-postgres-utilities-dbt-labs][dbt-postgres].json  test_plugin_details[target-postgres-loaders-meltanolabs][target-postgres].json
tests/litestar/: test_api.py
